Fix quirks with show/hide on the search bar
This is a small consistency improvement which ensures that whenever the
search is cleared the input becomes invisible. Previously, this only
worked correctly on the sidebar. Now, it works everywhere, including
when navigating using the back button to get to the unfiltered stream.

--- a/h/static/styles/common.scss
+++ b/h/static/styles/common.scss
@@ -782,11 +782,9 @@ pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
 
 //Visual Search////////////////////////////////
 //Override their css here
-.search-container {
-  overflow: hidden;
-}
-
 .VS-search {
+  overflow: hidden;
+
   * {
     @include box-sizing(content-box);
   }
